RESOLVED FIXED49473
WebKitCSSMatrix shouldn't inherit from StyleBase
https://bugs.webkit.org/show_bug.cgi?id=49473
Summary WebKitCSSMatrix shouldn't inherit from StyleBase
Alexey Proskuryakov
Reported 2010-11-12 13:45:23 PST
Because it needn't. See StyleBase.h: // Base class for most CSS DOM objects. // FIXME: We don't need these to all share one base class. // Refactor so they don't any more.
Attachments
proposed patch (4.09 KB, patch)
2010-11-12 13:49 PST, Alexey Proskuryakov
simon.fraser: review+
Alexey Proskuryakov
Comment 1 2010-11-12 13:49:05 PST
Created attachment 73774 [details] proposed patch
Alexey Proskuryakov
Comment 2 2010-11-12 13:49:05 PST
Created attachment 73775
Alexey Proskuryakov
Comment 3 2010-11-12 13:56:41 PST
Note You need to log in before you can comment on or make changes to this bug.