third_party/WebKit/WebCore/css/WebKitCSSMatrix.cpp
@@ -37,25 +37,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
-WebKitCSSMatrix::WebKitCSSMatrix()
-    : StyleBase(0)
-{
-}
-
-WebKitCSSMatrix::WebKitCSSMatrix(const WebKitCSSMatrix& m)
-    : StyleBase(0)
-    , m_matrix(m.m_matrix)
-{
-}
-
 WebKitCSSMatrix::WebKitCSSMatrix(const TransformationMatrix& m)
-    : StyleBase(0)
-    , m_matrix(m)
+    : m_matrix(m)
 {
 }
 
 WebKitCSSMatrix::WebKitCSSMatrix(const String& s, ExceptionCode& ec) 
-    : StyleBase(0)
 {
     setMatrixValue(s, ec);
 }
@@ -66,7 +53,7 @@ WebKitCSSMatrix::~WebKitCSSMatrix()
 
 void WebKitCSSMatrix::setMatrixValue(const String& string, ExceptionCode& ec)
 {
-    CSSParser p(useStrictParsing());
+    CSSParser p(true);
     RefPtr<CSSMutableStyleDeclaration> styleDeclaration = CSSMutableStyleDeclaration::create();
     if (p.parseValue(styleDeclaration.get(), CSSPropertyWebkitTransform, string, true)) {
         // Convert to TransformOperations. This can fail if a property 
