third_party/WebKit/WebCore/css/WebKitCSSMatrix.h
@@ -29,23 +29,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "ExceptionCode.h"
 #include "PlatformString.h"
-#include "StyleBase.h"
 #include "TransformationMatrix.h"
-#include <wtf/PassRefPtr.h>
 #include <wtf/RefPtr.h>
 
 namespace WebCore {
 
-class WebKitCSSMatrix : public StyleBase {
+class WebKitCSSMatrix : public RefCounted<WebKitCSSMatrix> {
 public:
-    static PassRefPtr<WebKitCSSMatrix> create()
-    {
-        return adoptRef(new WebKitCSSMatrix());
-    }
-    static PassRefPtr<WebKitCSSMatrix> create(const WebKitCSSMatrix& m)
-    {
-        return adoptRef(new WebKitCSSMatrix(m));
-    }
     static PassRefPtr<WebKitCSSMatrix> create(const TransformationMatrix& m)
     {
         return adoptRef(new WebKitCSSMatrix(m));
@@ -105,7 +95,7 @@ public:
     void setM43(double f) { m_matrix.setM43(f); }
     void setM44(double f) { m_matrix.setM44(f); }
  
-    void setMatrixValue(const String& string, ExceptionCode&);
+    void setMatrixValue(const String&, ExceptionCode&);
     
     // The following math function return a new matrix with the 
     // specified operation applied. The this value is not modified.
@@ -147,8 +137,6 @@ public:
     String toString() const;
     
 protected:
-    WebKitCSSMatrix();
-    WebKitCSSMatrix(const WebKitCSSMatrix&);
     WebKitCSSMatrix(const TransformationMatrix&);
     WebKitCSSMatrix(const String&, ExceptionCode&);
 
