third_party/WebKit/WebCore/html/canvas/WebGLRenderingContext.h
@@ -55,7 +55,6 @@ class HTMLVideoElement;
 class ImageBuffer;
 class ImageData;
 class IntSize;
-class WebKitCSSMatrix;
 
 class WebGLRenderingContext : public CanvasRenderingContext {
 public:
